# ModLab

./: .gitignore  CMakeLists.txt  README.md  diplom_v0.sln
.github/workflows/: build.yml
diplom_v0/: README.md  diplom_v0.cpp  diplom_v0.h  diplom_v0.qrc  diplom_v0.ui  diplom_v0.vcxproj  diplom_v0.vcxproj.filters  main.cpp
